<resources>
    <string name="app_name">Gym Trainer</string>
    <string name="action_settings">Settings</string>
    <string name="all">All</string>
    <string name="back">Back</string>
    <string name="biceps">Biceps</string>
    <string name="calves">Calves</string>
    <string name="cardio">Cardio</string>
    <string name="chest">Chest</string>
    <string name="core">Core</string>
    <string name="forearms">Forearms</string>
    <string name="glutes">Glutes</string>
    <string name="shoulder">Shoulder</string>
    <string name="triceps">Triceps</string>
    <string name="upperLegs">Upper Legs</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="advance">Advance</string>
    <string name="name">Name</string>
    <string name="difficulty">Difficulty</string>
    <string name="recent">Recent</string>
    <string name="workoutAreas">Workout Areas</string>
    <string name="myFavorites">My Favorites</string>
    <string name="ExercisesHeaderText">Exercises</string>
    <string name="LiveHeaderText">Live</string>
    <string name="ProfileHeaderText">Profile</string>
    <string-array name="workoutAreas">
        <item>@string/all</item>
        <item>@string/back</item>
        <item>@string/biceps</item>
        <item>@string/calves</item>
        <item>@string/cardio</item>
        <item>@string/chest</item>
        <item>@string/core</item>
        <item>@string/forearms</item>
        <item>@string/glutes</item>
        <item>@string/shoulder</item>
        <item>@string/triceps</item>
        <item>@string/upperLegs</item>
    </string-array>
    <string-array name="difficultyLevel">
        <item>@string/beginner</item>
        <item>@string/intermediate</item>
        <item>@string/advance</item>
        <item>@string/all</item>
    </string-array>
    <string name="BMIText">BMI</string>
    <string name="StreakText">Streak</string>
    <string name="RatingText">Rating</string>
    <string name="analysis">Analysis</string>
    <string name="achievements">Achievements</string>
    <string name="friends">Friends</string>
    <string name="messages">Messages</string>
    <string name="currentRoutine">Current Routine</string>
    <string name="consultation">Consultation</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="rateUs">Rate Us</string>
</resources>